CallCenter/infra/code/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: ccteams
    tier: backend
  name: ccteams
  namespace: cloud-explorer-d
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: ccteams
  template:
    metadata: 
      name: ccteams
      labels: 
        app: ccteams
    spec:
      containers:
        - image: premanshu/teams
          name: teams
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "2"
