CallCenter/infra/code/pods.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: premteam
  labels: 
    app: teams
    tier: backend
spec:
  containers:
    - name: teams
      image: premanshu/teams
