CallCenter/infra/code/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ccteams-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector: 
    app: ccteams
