CallCenter/infra/code/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: premteams-ingress
  namespace: cloud-explorer-d
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false" 
spec:
  ingressClassName: nginx
  rules:
  - host: premteamssvc.maersk-digital.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ccteams-service
            port: 
              number: 8080
  tls:
    - hosts:
      - premteams.maersk-digital.net
      secretName: tls-wildcard-maersk-digital-net
